tests/compile_fail/pod_char_field.stderr
error[E0277]: the trait bound `char: hopper::hopper_runtime::hopper_native::bytemuck::Pod` is not satisfied
 --> tests/compile_fail/pod_char_field.rs:7:1
  |
7 | #[pod]
  | ^^^^^^ the trait `hopper::hopper_runtime::hopper_native::bytemuck::Pod` is not implemented for `char`
  |
  = help: the following other types implement trait `hopper::hopper_runtime::hopper_native::bytemuck::Pod`:
            ()
            AccountHeader
            BadChar
            ManuallyDrop<T>
            Option<T>
            PhantomData<T>
            PhantomPinned
            SegmentDescriptor
          and $N others
note: required by a bound in `__FieldPodProof`
 --> tests/compile_fail/pod_char_field.rs:7:1
  |
7 | #[pod]
  | ^^^^^^ required by this bound in `__FieldPodProof`
  = note: this error originates in the attribute macro `pod` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation panicked: #[hopper::pod] struct `BadChar` must be alignment-1 (use Hopper wire types such as WireU64, WireI32, or TypedAddress<T> instead of raw u64/i32/Pubkey).
 --> tests/compile_fail/pod_char_field.rs:7:1
  |
7 | #[pod]
  | ^^^^^^ evaluation of `_` failed here
